Updating OOP code + starting work with saving

--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
 				<div class="tasks-blocks__title">нужно сделать</div>
 				<div class="tasks-blocks__cards"></div>
 			</div>
-			<div class="tasks-blocks__block">тестирование</div>
-			<div class="tasks-blocks__block">выполненое</div>
+			<div class="tasks-blocks__block">
+				<div class="tasks-blocks__title">тестирование</div>
+				<div class="tasks-blocks__cards"></div>
+			</div>
+			<div class="tasks-blocks__block">
+				<div class="tasks-blocks__title">выполненно</div>
+				<div class="tasks-blocks__cards"></div>
+			</div>
 		</section>
-		<script src="main.js"></script>
+		<script type="module" src="main.js"></script>
 	</body>
 </html>
