We implemented saving headers and started working on the menu

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
-		<link rel="stylesheet" href="./css/main.css" />
+		<link rel="stylesheet" href="./styles/main.css" />
 	</head>
 	<body>
 		<section class="tasks-blocks">
@@ -13,7 +13,7 @@
 				<div class="tasks-blocks__cards"></div>
 			</div>
 			<div class="tasks-blocks__block">
-				<div class="tasks-blocks__title">тестирование</div>
+				<div class="tasks-blocks__title1">тестирование</div>
 				<div class="tasks-blocks__cards"></div>
 			</div>
 			<div class="tasks-blocks__block">
@@ -21,6 +21,29 @@
 				<div class="tasks-blocks__cards"></div>
 			</div>
 		</section>
+		<div class="btns-Card" hidden>
+			<button class="btn-Card">открыть</button>
+			<button class="btn-Card">удалить</button>
+		</div>
+		<div class="menu" hidden>
+			<button class="menu__button">Добавить карточку</button>
+			<button class="menu__button">Отсортировать</button>
+		</div>
+		<div class="modal">
+			<div class="modal__enter">
+				<input
+					class="modal__name"
+					type="text"
+					placeholder="введите название"
+				/>
+				<textarea
+					class="modal__discription"
+					name="text"
+					placeholder="описание"
+				></textarea>
+				<button class="modal__button_create">Добавить карточку</button>
+			</div>
+		</div>
 		<script type="module" src="main.js"></script>
 	</body>
 </html>
