finished the initial part of the menu. improving the code structure.

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 				<div class="tasks-blocks__cards"></div>
 			</div>
 		</section>
-		<div class="btns-Card" hidden>
-			<button class="btn-Card">открыть</button>
-			<button class="btn-Card">удалить</button>
+		<div class="btns-card" hidden>
+			<button class="btn-card">открыть</button>
+			<button class="btn-card">удалить</button>
 		</div>
 		<div class="menu" hidden>
 			<button class="menu__button">Добавить карточку</button>
